style.css
body {
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding-top: 3.5rem;
  overflow: hidden;
}

html,
body {
  max-width: 100%;
  overflow-x: hidden;
}

/* Default Stylings for all elements */

.container {
  padding: 0 calc(2rem + 1vw);
}

/* NavBar related Styles */
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav a {
  text-decoration: none;
  color: #000000;
  font-weight: 500;
  font-size: 22px;
}

nav ul {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: calc(100% - -94px);
  padding: 0;
}

nav li {
  list-style: none;
  cursor: pointer;
}

.sign-up-btn {
  background: #000000;
  color: #fefefe;
  border-radius: 7px;
  padding: calc(0.4rem + 0.5vw) calc(0.5rem + 1vw);
  font-size: 22px;
}

.hamburger-menu {
  display: none;
  cursor: pointer;
}

/* Hero related stylings */

.hero-wrapper {
  background: #f4f6f5;
  border-radius: 59px;
  display: flex;
  align-items: flex-end;
  justify-content: space-evenly;
  padding: 3rem 2rem 0 6rem;
  margin-top: 46px;
}

.skewed-white-bg {
  background: #ffffff;
  padding: 0 165px 0 25px;
  display: inline-block;
  transform: rotate(-3deg);
}

.hero-girl-img {
  position: relative;
  top: 5px;
}

.skewed-white-bg-text {
  display: inline-block;
  transform: rotate(3deg);
}

.skewed-orange-bg {
  background: #ebd96b;
  padding: 0 125px 0 25px;
  display: inline-block;
  transform: rotate(-3deg);
}

.skewed-orange-bg-text {
  display: inline-block;
  transform: rotate(3deg);
}

.hero-right-part {
  width: 100%;
}

.hero-left-part {
  width: 100%;
  aspect-ratio: 1;
}

.hero-heading-text {
  font-size: 96px;
  font-weight: 900;
  margin: 0;
  padding: 0;
}

.shop-now-btn {
  background: #000000;
  text-decoration: none;
  color: #ffffff;
  border-radius: 7px;
  padding: 20px 36px;
  font-size: 25px;
}

.pay-day-shop-now-btn {
  background: #000000;
  text-decoration: none;
  color: #ffffff;
  border-radius: 7px;
  padding: 20px 36px;
  font-size: 25px;
  display: inline-block;
  margin-top: 10px;
}

/* Brands slider stylings */

.brands-slider-wrapper {
  margin-top: 33px;
  background: #e6c744;
  padding: 2rem 0;
}

ul.splide__list li {
  display: flex;
  align-items: center;
  justify-content: center;
}

.splide__list img {
  width: 50%;
}

/* New Arrivals Stylings */

.new-arrivals-section {
  position: relative;
  margin-bottom: 60px;
}

.new-arrivals-section-title {
  position: relative;
  z-index: 2;
  font-weight: 900;
  font-size: 48px;
}

.new-arrivals-wrapper {
  padding-right: 5rem;
}

.new-arrivals-product{
  width: 100%;
}



.new-arrivals-vector-img {
  position: absolute;
  top: 23px;
  left: 170px;
  z-index: 1;
}

.new-arrivals-details-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.new-arrivals-product-wrapper {
  display: flex;
  align-items: center;
  gap: 5rem;
}

.new-arrivals-image-wrapper img {
  width: 100%;
}

.new-arrivals-details h4 {
  margin: 0;
  padding: 0;
  font-weight: 500;
  font-size: 30px;
}

.new-arrivals-details p {
  margin: 0;
  padding: 0;
  color: #7f7f7f;
  font-size: 21px;
}

/* Sale Now Stylings */

.sale-now {
  margin: 0;
  padding: 0;
  background: linear-gradient(
    1.32deg,
    #e0c340 0.13%,
    #dfc23e 3.97%,
    #e1c441 7.2%,
    #e3c743 10.13%,
    #e4c542 12.98%,
    #e6c744 15.99%,
    #e7c845 19.52%,
    #e5c643 23.96%,
    #e6c945 30.43%,
    #e3c743 36.49%,
    #e9ca48 42.49%,
    #edce49 49.35%,
    #f0d44c 55.42%,
    #f4d84f 61.43%,
    #f6da52 65.74%,
    #f7db53 72.23%,
    #f9dd55 77.43%,
    #f9df56 83.84%,
    #fae157 91.52%,
    #f9df56 97.87%
  );
  display: flex;
  align-items: center;
  gap: 5rem;
  margin-top: 9rem;
  padding-top: 4rem;
  padding-right: 2rem;
}

.sale-white-bg {
  background: #ffffff;
  padding: 0 34px 0 18px;
  display: inline-block;
  transform: rotate(-2.5deg);
}

.sale-white-bg-text {
  display: inline-block;
  transform: rotate(2.5deg);
}

.sale-now-img {
  width: 100%;
  aspect-ratio: 1;
}

.sale-now .right-part-wrapper,
.sale-now .left-part-wrapper {
  width: 100%;
}

.sale-now .right-part-wrapper {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.sale-now .right-part-wrapper p,
.sale-now .right-part-wrapper h2 {
  margin: 0;
}

.sale-now .right-part-wrapper h2 {
  font-size: 110px;
}

.sale-now-text {
  font-size: 30px;
  font-weight: 500;
}
.sale-now-terms-and-conditions-wrapper {
  font-size: 30px;
}

.sale-now-conditions {
  font-weight: 700;
}

/* Young's Favorite Styling */

.youngs-favorite {
  position: relative;
  margin-bottom: 5rem;
  margin-top: 7rem;
}

.youngs-favorite-section {
  margin-bottom: 60px;
}

.youngs-favorite-section-title {
  position: relative;
  z-index: 2;
  color: black;
  font-size: 48px;
  font-weight: 900;
}

.youngs-favorite-vector-img {
  position: absolute;
  top: 28px;
  left: 313px;
  z-index: 1;
}

.youngs-favorite-details-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.youngs-favorite-product-wrapper {
  display: flex;
  align-items: center;
  gap: 5rem;
}

.youngs-favorite-image-wrapper img {
  width: 100%;
}

.youngs-favorite-details h4 {
  margin: 0;
  padding: 0;
  font-weight: 500;
  font-size: 30px;
}

.youngs-favorite-details p {
  margin: 0;
  padding: 0;
  color: #7f7f7f;
  font-size: 21px;
}

/* Download Apps Section Stylings */

.download-app {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.download-app-heading-text {
  font-size: 48px;
}

.download-app-text {
  font-size: 24px;
  color: #7c7c7c;
  margin-bottom: 75px;
}

.mobile-app-img {
  width: 100%;
}

/* Desktop stylings */

@media screen and (max-width: 1000px) and (min-width: 768px) {
  /* Navbar links Stylings */

  nav a {
    font-size: 13px;
    padding-right: 5px;
  }
  .sign-up-btn {
    font-size: 13px;
    padding: 8px 13px;
  }
}
/* ... */

